2019-10-15  Martin Sebor  <msebor@redhat.com>

	PR testsuite/92016
	* gcc.dg/Wstringop-overflow-17.c: Expect an additional warning.

2019-10-15  Bill Schmidt  <wschmidt@linux.ibm.com>

	PR target/92093
	* gcc.target/powerpc/pr91275.c: Fix type and endian issues.

2019-10-15  Richard Biener  <rguenther@suse.de>

	PR testsuite/92048
	* gcc.dg/vect/fast-math-vect-pr29925.c: Avoid unrolling of
	inner loop.

2019-10-15  Ilya Leoshkevich  <iii@linux.ibm.com>

	* gcc.target/s390/load-thread-pointer-once.c: New test.

2019-10-15  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92094
	* gfortran.dg/pr92094.f90: New testcase.

2019-10-15  Hongyu Wang  <hongyu.wang@intel.com>

	PR target/92035
	* gcc.target/i386/avx512f-vrndscaless-1.c: Add scan-assembler-times
	directives for newly expected instructions.
	* gcc.target/i386/avx512f-vrndscalesd-1.c: Likewise.
	* gcc.target/i386/avx512f-vrndscaless-2.c
	(avx512f_test): Add tests for new intrinsics.
	* gcc.target/i386/avx512f-vrndscalesd-2.c: Likewise.
	* gcc.target/i386/avx-1.c (__builtin_ia32_rndscalefss_round,
	__builtin_ia32_rndscalefsd_round): Remove.
	(__builtin_ia32_rndscalefss_mask_round,
	__builtin_ia32_rndscalefsd_mask_round): Define.
	* gcc.target/i386/sse-13.c: Ditto.
	* gcc.target/i386/sse-23.c: Ditto.

2019-10-15  Richard Biener  <rguenther@suse.de>

	PR middle-end/92046
	* c-c++-common/cxxbitfields-3.c: Adjust.
	* c-c++-common/cxxbitfields-6.c: Likewise.
	* c-c++-common/simulate-thread/bitfields-1.c: Likewise.
	* c-c++-common/simulate-thread/bitfields-2.c: Likewise.
	* c-c++-common/simulate-thread/bitfields-3.c: Likewise.
	* c-c++-common/simulate-thread/bitfields-4.c: Likewise.
	* g++.dg/simulate-thread/bitfields-2.C: Likewise.
	* g++.dg/simulate-thread/bitfields.C: Likewise.
	* gcc.dg/lto/pr52097_0.c: Likewise.
	* gcc.dg/simulate-thread/speculative-store-2.c: Likewise.
	* gcc.dg/simulate-thread/speculative-store-3.c: Likewise.
	* gcc.dg/simulate-thread/speculative-store-4.c: Likewise.